Move dismiss button to top-right to avoid overlapping flip button

--- a/src/components/PlayerCard.module.css
+++ b/src/components/PlayerCard.module.css
@@ -9,7 +9,7 @@
 .dismissBtn {
   position: absolute;
   top: 8px;
-  left: 8px;
+  right: 8px;
   z-index: 10;
   width: 32px;
   height: 32px;
